# hw03wildcatshawkeyes

./: .gitignore  Cargo.toml  README.md  acc_model.onnx  acc_model.onnx.data  hw03_metrics.csv  pyproject.toml
scripts/: .nfs00000000002a164b00006a7d  acc_classifier.py  acc_classifier.py”.py  image_model.onnx  image_model1.onnx  imagenet_impl.py  imagenet_inference.py  run_bg.sh
src/: lib.rs
src/hw03wildcatshawkeyes/: __init__.py
src/hw03wildcatshawkeyes/deepl/: __init__.py  data_processor.py  multiclass.py
src/hw03wildcatshawkeyes/“deepl/: __init__.py  multiclass.py  multiclass.py.py  two_layer_binary_classification.py
