[project]
name = "hw03wildcatshawkeyes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wildcatshawkeyesgh", email = "wildcatshawkeyesgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "numpy>=2.4.2",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "polars>=1.38.1",
    "pytorch-toolbelt>=0.8.0",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "hw03wildcatshawkeyes._core"
python-packages = ["hw03wildcatshawkeyes"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
